Fixed a bug with navbar not showing on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -62,15 +62,12 @@ header {
   height: 50px;
   z-index: 1;
   width: 100%;
-  // background-color: #34a65f;
   background-color: $dark-blue;
   font-family: "Pacifico";
 }
 
 .nav {
-  // background-color: $secondary-color;
   background-color: $gray;
-  position: fixed !important;
 }
 
 .weather-box {
@@ -85,10 +82,6 @@ header {
 .box {
   background-color: $dark-blue;
 }
-
-// .nav-link {
-//     position: fixed;
-// }
 
 .row .nav-pills .active {
   background-color: $light-color;
